frappe/public/less/desk.less
@import "variables.less";
@import "mixins.less";
@import "common.less";
@import "quill.less";

.nav-pills a, .nav-pills a:hover {
	border-bottom: none;
}

a.form-link {
	color: inherit;
	font-weight: bold;
	font-size: 102%;
}

a[disabled="disabled"] {
	color: @text-muted;
	text-decoration: none;
	cursor: default;

	&:hover {
		text-decoration: none;
	}
}

.link-primary& {
	color: @brand-primary;

	&:hover, &:focus {
		color: @brand-primary;
	}
}

.scroll-to-top {
	background-color: @light-bg;
	padding: 7px;
	border-radius: 3px;
}

.alert-badge {
	margin: 4px 0px;
}

.alert-badge .badge {
	margin-top: 3px;
}

/* alert */


#alert-container {
	position: fixed;
	bottom: 0px;
	right: 20px;
	z-index: 1050;
}

#alert-container .desk-alert {
	box-shadow: 0 0px 5px rgba(0, 0, 0, 0.1);
	max-width: 400px;
	min-width: 200px;
	max-height: 200px;
	background-color: @light-yellow;
	border: 1px solid @border-color;

	// word-break: break-all;
	overflow-y: auto;
	position: relative;
	transform: translateX(calc(100% + 20px));
	transition: transform 300ms ease;
	padding: 0px;

	.alert-message {
		padding: 10px 40px 10px 10px;
	}

	.close {
		position: absolute;
		top: 10px;
		right: 10px;
		color: inherit;
		opacity: 1;
		font-size: inherit;
	}

	.next-action-container {
		display: flex;

		.next-action {
			border: none;
			background: none;
			width: 100%;
			border-top: 1px solid @border-color;
			border-right: 1px solid @border-color;
			padding: 7px;
			outline: none;
			font-size: 12px;
			font-weight: bold;
			color: @text-light;

			&:hover {
				background-color: darken(@light-yellow, 5%);
			}

			&:last-child {
				border-right: none;
			}
		}
	}
}

.missing-image {
	background-color: @light-bg;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	width: 140px;
	height: 140px;
}

.missing-image .octicon {
	font-size: 32px;
	color: @border-color;
}

.missing-image.small {
	width: 20px;
	height: 20px;
}

.missing-image.small .octicon {
	font-size: 16px;
}

.frappe-editor {
	cursor: text;
}

.frappe-editor img {
	max-width: 100%;
}

textarea.form-control {
	height: 120px;
}

.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
	background-color: @light-bg;
}


.link-select-row {
	padding: 5px;
	border-bottom: 1px solid @light-border-color;
}

.hidden-xs-inline, .hidden-xs-inline-block {
	display: none;
}

.barcode-wrapper {
	text-align: center;
}

@media (min-width: 768px) {
	.video-modal .modal-dialog {
		width: 700px;
	}
}

@media (min-width: 768px) {
	.hidden-xs-inline {
		display: inline;
	}
	.hidden-xs-inline-block {
		display: inline-block;
	}

	.listview-main-section {
		border-right: 1px solid @border-color;
	}
}

.panel-bg {
	background-color: @panel-bg;
}

.light-bg {
	background-color: @light-bg;
}

.modal-backdrop {
	opacity: 0.5;
	position: fixed;
}

.modal-header {
	padding: 10px 15px;
}

.modal-title {
	margin-top: 5px;
}

.modal-message {
	margin: 30px 15px;
	color: @text-muted;
	text-align: center;
}

.btn-primary.disabled {
	background-color: #b1bdca;
	color: #fff;
	border-color: #b1bdca;
}

.form-control {
	position: relative;

	input {
		// for vertically aligned text in inputs
		padding: 6px 10px 8px;
	}
}

.input-area {
	position: relative;
}

.input-xs {
	height: 26px;
	font-size: @text-medium;
}

.link-field.ui-front {
	z-index: inherit;
}

.modal .hasDatepicker {
	z-index: 1140;
}

.link-field.ui-front {
	z-index: inherit;
}

.form-group {
	margin-bottom: 7px;
}

.print-preview {
	padding: 0px;
	max-width: 8.3in;
	margin: auto;
	min-height: 11.69in;
}

.open-notification {
	position:relative;
	left: 2px;
	display:inline-block;
	background:#ff5858;
	font-size: @text-medium;
	line-height:20px;
	padding:0 8px;
	color:#fff;
	border-radius:10px;
	cursor: pointer;
	margin-right: 10px;
}

a.progress-small {
	.progress-chart {
		width: 40px;
		margin-top: 4px;
		float: right;
	}

	.progress {
		margin-bottom: 0;
	}

	.progress-bar {
		transition: unset;
		background-color: #98d85b;
	}
}

li.user-progress {
	.progress-chart {
		width: 50px;
		margin-top: 8px;
	}

	.progress {
		margin-bottom: 0;
		background-color: #fff;
		border: 1px solid #e5e7e9;
	}

	.progress-bar {
		transition: unset;
		background-color: #98d85b;
	}
}

/* on small screens, show only icons on top */
@media (max-width: 767px) {
	.module-view-layout .nav-stacked > li {
		float: left;
		margin-bottom: 5px;
	}

	.nav-stacked > li + li {
	  margin-top: 0px;
	  margin-left: 2px;
	}

	li.user-progress .progress-chart {
		width: 25px;
	}

	li.user-progress {
		display: none;
	}
}

.msg-box {
	padding: 30px 15px;
	text-align: center;
	color: @text-muted;
}

.no-border {
	border: none !important;
}

.message-row {
	padding: 10px 15px;
}

.message-row .indicator {
	margin-left: -5px;
	margin-right: -20px;
}

.message-box {
	.indicator {
		margin-right: 15px;
		margin-top: 7px;
	}

	.timeline-head {
		padding: 30px;
		border: 0px;
		border-bottom: 1px solid @border-color;
	}
}

.page-only-label {
	margin-top: 5px;
	text-align: center;
}

.intro-area {
	padding: 15px 30px;
}

.file-upload {
	.input-group-addon {
		color: @text-muted;
		font-size: 12px;
	}

	.file-upload-or {
		font-size: 12px;
		margin: 0px 7px;
	}

	.uploaded-filename,
	.web-link-wrapper,
	.input-upload,
	.input-link {
		display: inline-block;
		vertical-align: middle;
	}

	.input-upload {
		vertical-align: top;
	}

	.uploaded-filename {
		border: 1px solid @border-color;
		border-radius: 3px;
	}

	.uploaded-filename .btn-group {
		margin-right: 5px;
		margin-bottom: 5px;
	}

	.uploaded-filename-display {
		max-width: 150px;
	}

	.file-public-column {
		flex: 0 0 36px;
		order: -1;
		justify-content: flex-end;

		input[type="checkbox"] {
			margin-right: 0;
		}
	}

}

.frappe-rtl input ,.frappe-rtl textarea {
	direction: rtl;
}

.frappe-rtl .checkbox .disp-area {
	margin-right: -20px;
	margin-left: 0px;
}
/* ... */

